applications/kubernetes/external-routes/argocd/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.kube.eggenberg.io`)
    kind: Rule
    priority: 10
    services:
    - name: argocd-server
      port: 80
  - match: Host(`argocd.kube.eggenberg.io`) && Header(`Content-Type`, `application/grpc`)
    kind: Rule
    priority: 11
    services:
      - name: argocd-server
        port: 80
        scheme: h2c
  tls:
    secretName: argocd-certificate-secret
